manifests/jellyfin-internal-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-crd-internal
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`media.claytonc.dev`)
    kind: Rule
    services:
    - name: jellyfin
      port: 8096
  tls:
    secretName: jellyfin-internal-tls
